--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "dependencies": {
+    "ejs": "^3.1.8",
     "express": "^4.18.1"
   },
   "name": "todo_list",
   "version": "1.0.0",
   "main": "app.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.16"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app",
+    "dev": "nodemon app"
   },
   "author": "",
   "license": "ISC",
