--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "dependencies": {
-    "ejs": "^3.1.8",
-    "express": "^4.18.1"
-  },
   "name": "todo_list",
   "version": "1.0.0",
+  "description": "",
   "main": "app.js",
-  "devDependencies": {
-    "nodemon": "^2.0.16"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app",
     "dev": "nodemon app"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "consign": "^0.1.6",
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "mongoose": "^6.3.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
+  }
 }
