--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "site2",
+  "name": "aula11-05",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "appn.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app",
